Fix freckleskies 88x31 button alignment on links page

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -36,7 +36,7 @@ a:hover {
 	text-decoration: underline;
 }
 
-.content img {
+.blog-content img {
 	display: block;
 	max-width: 100%;
 	margin-left: auto;
